force-app/main/default/objects/CMP_Setting__c/fields/AddressConfirmKey__c.field-meta.xml
<CustomField>
    <fullName>AddressConfirmKey__c</fullName>
    <description>도로명 주소 API 인증키</description>
    <label>AddressConfirmKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>