force-app/main/default/objects/CMP_Setting__c/fields/AddressUrl__c.field-meta.xml
<CustomField>
    <fullName>AddressUrl__c</fullName>
    <description>도로명 API 주소</description>
    <label>AddressUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>