force-app/main/default/objects/CMP_Setting__c/fields/DefaultPageNumber__c.field-meta.xml
<CustomField>
    <fullName>DefaultPageNumber__c</fullName>
    <description>initial the first page</description>
    <label>Default Page Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>