force-app/main/default/objects/CMP_Setting__c/fields/DefaultPageSize__c.field-meta.xml
<CustomField>
    <fullName>DefaultPageSize__c</fullName>
    <description>the number of record that display on UI</description>
    <label>Default Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>