force-app/main/default/objects/CMP_Setting__c/fields/ExcelDownloadValidationClass__c.field-meta.xml
<CustomField>
    <fullName>ExcelDownloadValidationClass__c</fullName>
    <description>Excel Download Validation 클래스</description>
    <inlineHelpText>Excel Download Validation 클래스</inlineHelpText>
    <label>Excel Download Validation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>