force-app/main/default/objects/CMP_Setting__c/fields/G_KEY__c.field-meta.xml
<CustomField>
    <fullName>G_KEY__c</fullName>
    <description>Google Vision / Google Translator API Key</description>
    <inlineHelpText>Google Vision / Google Translator API Key</inlineHelpText>
    <label>G_KEY</label>
    <length>80</length>
    <type>Text</type>
</CustomField>