force-app/main/default/objects/CMP_Setting__c/fields/GPT_ASSISTANT_ID__c.field-meta.xml
<CustomField>
    <fullName>GPT_ASSISTANT_ID__c</fullName>
    <label>ChatGPT Asisstant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>