force-app/main/default/objects/CMP_Setting__c/fields/GPTAPI__c.field-meta.xml
<CustomField>
    <fullName>GPTAPI__c</fullName>
    <description>Chat GPT API</description>
    <inlineHelpText>Chat GPT API</inlineHelpText>
    <label>GPTAPI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>