force-app/main/default/objects/CMP_Setting__c/fields/IsTriggerActive__c.field-meta.xml
<CustomField>
    <fullName>IsTriggerActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate trigger or not</description>
    <inlineHelpText>Activate trigger or not</inlineHelpText>
    <label>Is Trigger Active</label>
    <type>Checkbox</type>
</CustomField>