force-app/main/default/objects/CMP_Setting__c/fields/MaximumNumberOfBanner__c.field-meta.xml
<CustomField>
    <fullName>MaximumNumberOfBanner__c</fullName>
    <description>This is the maximum number of Banner Links at the same expiration date</description>
    <label>Maximum Number Of Banner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>