force-app/main/default/objects/CMP_Setting__c/fields/MaxWidthCustomValue__c.field-meta.xml
<CustomField>
    <fullName>MaxWidthCustomValue__c</fullName>
    <description>The max-width value apply for screen flow</description>
    <label>Max Width Custom Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>