force-app/main/default/objects/CMP_Setting__c/fields/MinWidthCustomValue__c.field-meta.xml
<CustomField>
    <fullName>MinWidthCustomValue__c</fullName>
    <description>The min-width value apply for the custom screen flow</description>
    <label>Min Width Custom Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>