force-app/main/default/objects/CMP_Setting__c/fields/NaverClientSecret__c.field-meta.xml
<CustomField>
    <fullName>NaverClientSecret__c</fullName>
    <description>도로명 주소 네이버 지도 API 사용 인증 Secret Key</description>
    <label>NaverClientSecret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>