force-app/main/default/objects/CMP_Setting__c/fields/NaverGeocodeUrl__c.field-meta.xml
<CustomField>
    <fullName>NaverGeocodeUrl__c</fullName>
    <description>네이버 Geocode API 주소</description>
    <label>NaverGeocodeUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>