force-app/main/default/objects/CMP_Setting__c/fields/NaverMapUrl__c.field-meta.xml
<CustomField>
    <fullName>NaverMapUrl__c</fullName>
    <description>Naver Map URL 주소</description>
    <label>NaverMapUrl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>