force-app/main/default/objects/CMP_Setting__c/fields/OpenWeatherAppid__c.field-meta.xml
<CustomField>
    <fullName>OpenWeatherAppid__c</fullName>
    <description>날씨 조회 사이트 Open Weather App ID</description>
    <label>OpenWeatherAppid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>