force-app/main/default/objects/CMP_Setting__c/fields/OpenWeatherUrl__c.field-meta.xml
<CustomField>
    <fullName>OpenWeatherUrl__c</fullName>
    <description>날씨 조회 Open Weather 사이트</description>
    <label>OpenWeatherUrl</label>
    <length>200</length>
    <type>Text</type>
</CustomField>