force-app/main/default/objects/CMP_Setting__c/fields/PaginationRecordSize__c.field-meta.xml
<CustomField>
    <fullName>PaginationRecordSize__c</fullName>
    <description>The maximum number of Banner Link for pagination</description>
    <label>Pagination Record Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>