force-app/main/default/objects/CMP_Setting__c/fields/UseBigObjectForLogging__c.field-meta.xml
<CustomField>
    <fullName>UseBigObjectForLogging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to use big object (InterfaceLog__b) to log interface log or user custom object (InterfaceLog2__c)</description>
    <inlineHelpText>Whether to use big object (InterfaceLog__b) to log interface log or user custom object (InterfaceLog2__c)</inlineHelpText>
    <label>Use Big Object for logging</label>
    <type>Checkbox</type>
</CustomField>