force-app/main/default/objects/CMP_Setting__c/fields/UseCustomSync__c.field-meta.xml
<CustomField>
    <fullName>UseCustomSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to use custom sync or not</description>
    <inlineHelpText>Whether to use custom sync or not</inlineHelpText>
    <label>Use Custom Sync</label>
    <type>Checkbox</type>
</CustomField>