force-app/main/default/objects/CMP_Setting__c/fields/UseTarget__c.field-meta.xml
<CustomField>
    <fullName>UseTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to use Target or not</description>
    <inlineHelpText>Whether to use Target or not</inlineHelpText>
    <label>Use Target</label>
    <type>Checkbox</type>
</CustomField>