force-app/main/default/objects/CMP_Setting__c/fields/UseTeamMember__c.field-meta.xml
<CustomField>
    <fullName>UseTeamMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting for using team member</description>
    <label>Use Team Member</label>
    <type>Checkbox</type>
</CustomField>