force-app/main/default/objects/CMP_Setting__c/fields/UseTranslation__c.field-meta.xml
<CustomField>
    <fullName>UseTranslation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to use translate or not</description>
    <inlineHelpText>Whether to use translate or not</inlineHelpText>
    <label>Use Translation</label>
    <type>Checkbox</type>
</CustomField>